# cheat_bot_stu

./: .gitignore  README.md  main.py  pyproject.toml
cheat_bot/clients/: __init__.py  utils.py
cheat_bot/clients/postgres_client/: postgres_connector.py
cheat_bot/clients/s3_client/: s3_connector.py
cheat_bot/config/: __init__.py  config.py
cheat_bot/di/: __init__.py  container.py  di.py  repository_container.py
cheat_bot/model/database/: __init__.py  models.py
cheat_bot/model/fsm/: storage.py
cheat_bot/model/postgres/: __init__.py  postgres_communication.py
cheat_bot/model/s3_storage/: __init__.py  s3_storage.py
cheat_bot/model/sсhemes/: __init__.py  constants.py  schemes.py
cheat_bot/model/validators/: validators.py
cheat_bot/presenter/: conversion.py
cheat_bot/presenter/error_handlers/: __init__.py  custom_errors.py
cheat_bot/presenter/fsm_presenter/: fsm_presenter.py
cheat_bot/presenter/user_presenter/: __init__.py  user_presenter.py
cheat_bot/repository/: __init__.py  s3_interface.py  s3_system.py  user_interface.py  user_system.py
cheat_bot/repository/sources/file_repository/: file_repository.py
cheat_bot/utils/: singleton_meta.py
cheat_bot/view/: __init__.py
cheat_bot/view/admin_handlers/: admin_handlers.py  constants.py
cheat_bot/view/keyboards/: __init__.py  callbacks.py  enums.py  keyboards.py  states.py
cheat_bot/view/templates/: __init__.py  text_data_file.json  text_data_file.py
cheat_bot/view/user_handlers/: user_handlers.py
migration/: env.py
migration/versions/: 25c565a72e0c_initial.py  afe9082d8eff_initial.py
(+7 files in other folders)
