[tool.poetry]
name = "cheat-bot"
version = "0.1.0"
description = ""
authors = ["Timur Rybakov <timurhajrulin@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
alembic = "^1.13.0"
boto3 = "^1.34.4"
requests = "^2.31.0"
redis = "^5.0.1"
databases = "^0.8.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
asyncpg = "^0.29.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
indent-size = 4
indent-style = "space"
